--- a/package.json
+++ b/package.json
@@ -1,32 +1,40 @@
 {
-  "name": "reading-tutor",
+  "name": "electron-quick-start-typescript",
   "version": "1.0.0",
-  "description": "Reading tutor",
-  "main": "main.js",
+  "description": "A minimal Electron application written with Typescript",
   "scripts": {
-    "start": "electron src/main/main.js",
+    "build": "tsc",
+    "watch": "tsc -w",
+    "lint": "eslint -c .eslintrc --ext .ts ./src",
+    "start": "npm run build && electron ./dist/main/main.js",
     "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
-  "keywords": [],
+  "repository": "https://github.com/electron/electron-quick-start-typescript",
+  "keywords": [
+    "Electron",
+    "quick",
+    "start",
+    "tutorial",
+    "demo",
+    "typescript"
+  ],
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
+    "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^28.1.6",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "babel-jest": "^28.1.3",
-    "electron": "^19.0.9",
-    "electron-reload": "^2.0.0-alpha.1",
-    "jest": "^28.1.3"
+    "copyfiles": "^2.4.1",
+    "electron": "^18.2.3",
+    "eslint": "^7.32.0",
+    "ts-jest": "^28.0.7",
+    "typescript": "^4.7.2"
   },
-  "bugs": {
-    "url": ""
-  },
-  "homepage": "",
   "dependencies": {
-    "@google-cloud/speech": "^4.10.2",
     "node-record-lpcm16": "^1.0.1"
   }
 }
