--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reading-tutor",
   "version": "1.0.0",
+  "type": "commonjs",
   "description": "Program for learning reading.",
   "scripts": {
     "build": "tsc",
@@ -10,7 +11,7 @@
     "test": "jest"
   },
   "repository": "https://github.com/Ch3shireDev/reading-tutor",
-  "keywords": [ ],
+  "keywords": [],
   "author": "Ch3shireDev",
   "devDependencies": {
     "@babel/core": "^7.18.9",
@@ -28,6 +29,7 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
-    "node-record-lpcm16": "^1.0.1"
+    "node-record-lpcm16": "^1.0.1",
+    "require.js": "^1.0.0"
   }
 }
