--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
     "start": "npm run build && electron ./dist/main/main.js",
-    "start2": "npm run build && electron ./dist/main/library/word-receivers/InfiniteStreamingService.js",
     "test": "jest"
   },
   "jest": {
     "preset": "ts-jest",
-    "testPathIgnorePatterns": ["/node_modules/", "/dist/"]
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/"
+    ]
   },
   "repository": "https://github.com/Ch3shireDev/reading-tutor",
   "keywords": [],
@@ -29,11 +31,15 @@
     "babel-jest": "^28.1.3",
     "copyfiles": "^2.4.1",
     "electron": "^18.2.3",
+    "electron-reload": "^2.0.0-alpha.1",
     "eslint": "^7.32.0",
     "ts-jest": "^28.0.7",
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "bootstrap": "^5.2.0",
+    "font-awesome": "^4.7.0",
+    "fontawesome-free": "^1.0.4",
     "node-record-lpcm16": "^1.0.1",
     "require.js": "^1.0.0"
   }
