--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,22 +2,26 @@
   "compilerOptions": {
     "strict": true,
     "target": "ES6",
-
     "module": "commonjs",
     "esModuleInterop": true,
     "moduleResolution": "node",
-
     "noImplicitAny": true,
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
-      "*": ["node_modules/*"]
+      "*": [
+        "node_modules/*"
+      ]
     }
   },
   "include": [
     "src/**/*",
     "decs.d.ts"
   ],
-  "typeRoots": ["./node_modules/@types", "./src/types"]
+  "typeRoots": [
+    "./node_modules/@types",
+    "./src/types"
+  ],
+  "esModuleInterop": true
 }
